@@ -1,3 +1,5 @@
+HEAD
+	+ Add widget for external retrieval service (fetchmail)
 1.3.17
 	+ Added breadcrumbs to external aliases and virtual domain
 	  settings models
